Fix declarationDir field in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "alwaysStrict": true,
         "declaration": true,
-        "declarationDir": "./types",
+        "declarationDir": "./declarations",
         "forceConsistentCasingInFileNames": true,
         "module": "commonjs",
         "noImplicitAny": true,
